--- a/css/styles.css
+++ b/css/styles.css
@@ -338,31 +338,31 @@
     display: flex;
     flex-wrap: wrap;
     background-color: cornflowerblue;
-    margin-top: -30px;
-    margin-left: -30px;
+    /* margin-top: -30px;
+    margin-left: -30px; */
 }
 .filter-list-section-ul > .list-element {
-    flex-basis: calc(100% / 3 - 30px);
+    /* flex-basis: calc(100% / 3); */
     outline: 1px solid chartreuse;
-    margin-top: 30px;
-    margin-left: 30px;
+    /* margin-top: 30px;
+    margin-left: 30px; */
 }
 .list-element {
-    /* width: calc((100% - 60px) / 3);
-    margin-right: 30px; */
+    width: calc((100% - 60px) / 3);
+    margin-right: 30px;
     /* width: 370px; */
     border-bottom: 1px solid var(--primary-bcg-color);
     border-left: 1px solid var(--primary-bcg-color);
     border-right: 1px solid var(--primary-bcg-color);
 }
 
-/* .list-element:nth-child(3n) {
+.list-element:nth-child(3n) {
     margin-right: 0;
 }
 
 .list-element:not(:nth-last-child(-n + 3)) {
     margin-bottom: 30px;
-} */
+}
 
 /* margin-right: 30px;
     margin-bottom: 30px;
