--- a/css/styles.css
+++ b/css/styles.css
@@ -302,9 +302,6 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-
-    background-color: wheat;
-    outline: 1px dashed blueviolet;
 }
 .button-filter-list.list {
     flex-direction: row;
@@ -333,51 +330,44 @@
 .btn-filter:focus {
     color: var(--white-color);
 }
+/*=================== filter-list-section=================== */
 
 .filter-list-section-ul {
     display: flex;
     flex-wrap: wrap;
-    background-color: cornflowerblue;
-    /* margin-top: -30px;
-    margin-left: -30px; */
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
 }
-.filter-list-section-ul > .list-element {
-    /* flex-basis: calc(100% / 3); */
-    outline: 1px solid chartreuse;
-    /* margin-top: 30px;
-    margin-left: 30px; */
-}
-.list-element {
-    width: calc((100% - 60px) / 3);
-    margin-right: 30px;
-    /* width: 370px; */
-    border-bottom: 1px solid var(--primary-bcg-color);
-    border-left: 1px solid var(--primary-bcg-color);
-    border-right: 1px solid var(--primary-bcg-color);
-}
+.filter-list-section-ul.list > .list-element {
+    /* width: calc((100% - 60px) / 3);
+    margin-right: 30px; */
 
-.list-element:nth-child(3n) {
+    flex-basis: calc(100% / 3 - var(--card-set-gap));
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+}
+/* .list-element * {
+    outline: 1px solid tomato;
+} */
+
+/* .list-element:nth-child(3n) {
     margin-right: 0;
 }
 
 .list-element:not(:nth-last-child(-n + 3)) {
     margin-bottom: 30px;
-}
+} */
 
-/* margin-right: 30px;
-    margin-bottom: 30px;
-}
-.list-element:nth-child(3n + 3) {
+/* .list-element:nth-child(3n + 3) {
     margin-right: 0;
 }
 .list-element:nth-last-child(-n + 3) {
     margin-bottom: 0px;
-} */
-
-/* .list-element:not(:nth-child(3n + 3)) {
+}
+ .list-element:not(:nth-child(3n + 3)) {
     margin-right: 30px;
 }
- */
+  */
 
 .filter-list-section-ul h3 {
     font-weight: bold;
@@ -396,6 +386,9 @@
 
 .filter-list-description {
     padding: 20px 24px;
+    border-bottom: 1px solid var(--primary-bcg-color);
+    border-left: 1px solid var(--primary-bcg-color);
+    border-right: 1px solid var(--primary-bcg-color);
 }
 
 /* ========================= portfolio ends ========================= */
