--- a/css/common.css
+++ b/css/common.css
@@ -20,6 +20,7 @@ html {
     --active-color: #2196f3;
     --focus-color: #2196f3;
     --card-set-gap: 30px;
+    --icon-silent-color: #afb1b8;
 }
 
 body {
