--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@
 }
 .site-nav-ul a:active {
     color: var(--active-color);
-    background-color: var(--active-color);
+    background-color: var(--white-color);
 }
 .site-nav-ul a:focus {
     color: var(--active-color);
@@ -85,7 +85,7 @@
     margin-left: auto;
 }
 .list .item + .item {
-    margin-left: 30px;
+    margin-left: 50px;
 }
 .list .address-section {
     display: block;
@@ -99,7 +99,7 @@
 }
 
 .address-section.address-icon {
-    display: inline-flex;
+    display: flex;
     align-items: center;
 }
 .icon-mail {
@@ -164,7 +164,7 @@
 }
 
 .hero {
-    min-width: 1600px;
+    max-width: 1600px;
     text-align: center;
     background-color: #c4c4c4;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -191,6 +191,17 @@
     padding: 10px 32px;
     border-radius: 4px;
     border: transparent;
+
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* ================================ Что мы делаем =========================== */
@@ -246,15 +257,15 @@
     background-position: center;
 } */
 
-.whatdoing-ul .item + .item {
-    padding-left: 30px;
-}
 .whatdoing-ul.list,
 .preview-ul.list,
 .section-title-list.list,
 .site-nav-ul.list,
 .list {
     padding-left: 0;
+}
+.whatdoing-ul.list > .item + .item {
+    margin-left: 30px;
 }
 
 .whatdoing-ul h3 {
@@ -536,6 +547,9 @@
     border-radius: 50%;
 }
 
+.icon-footer {
+    fill: var(--white-color);
+}
 .footer-section-list li:nth-child(n + 2) {
     margin-left: 10px;
 }
@@ -544,8 +558,8 @@
 .footer-section-links:focus {
     background-color: var(--active-color);
 }
-.footer-section-links:hover > .icon,
-.footer-section-links:focus > .icon {
+.footer-section-links:hover > .icon-footer,
+.footer-section-links:focus > .icon-footer {
     fill: var(--white-color);
 }
 /* .footer-section-links.insta {
